fix api url and login and register logo size on mobile

--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -42,7 +42,7 @@
     transform: translate(-50%, -50%);
   }
   .toolbar__image {
-    width: 10rem;
+    width: 6rem;
   }
   .toolbar__tab-container {
     display: none;
