--- a/src/app/routes/user/login/login.component.scss
+++ b/src/app/routes/user/login/login.component.scss
@@ -83,4 +83,8 @@ span {
   .form__image {
     display: none;
   }
+
+  .seamstress__logo {
+    width: 6rem;
+  }
 }
