--- a/src/app/routes/user/register/register.component.scss
+++ b/src/app/routes/user/register/register.component.scss
@@ -98,4 +98,8 @@ span {
   .form__image {
     display: none;
   }
+
+  .seamstress__logo {
+    width: 6rem;
+  }
 }
